# trading-system

./: CMakeLists.txt  README.md  config.json  live_config.json  replay_config.json
src/: CMakeLists.txt  main.cpp
src/binance/: api.cpp  api.h  config.cpp  config.h  decoder.cpp  decoder.h  gateway.cpp  gateway.h  orderbook.cpp  orderbook.h  queue.h  recovery_manager.cpp  recovery_manager.h  runtime_factory.cpp  runtime_factory.h  sequencer.cpp  sequencer.h
src/binance/network/: rest_client.cpp  rest_client.h  ws_source.cpp  ws_source.h
src/common/: book_update.h  config.cpp  config.h  decoder.h  envelope.h  errors.h  gateway.h  level.h  log.h  market.cpp  market.h  orderbook.h  orderbook_validation.h  queue.h  recovery_manager.h  runtime.cpp  runtime.h  runtime_factory.h  sequencer.h  signal_listener.cpp  signal_listener.h  snapshot.h  symbol.cpp  symbol.h  time.h  worker.h
src/metrics/: format.h  registry.h  reporter.h  scoped_latency.h  snapshot.h
src/recording/: market_data_recorder.cpp  market_data_recorder.h
src/replay/: market_data.cpp  market_data.h  market_data_recorder.cpp  market_data_recorder.h  replay_gateway.cpp  replay_gateway.h
src/utils/: utils.cpp  utils.h
tests/: CMakeLists.txt  decoder_test.cpp  orderbook_validation_test.cpp  recovery_manager_test.cpp  sequencer_test.cpp  smoke_test.cpp  test_helpers.h
